--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,5 @@
 /* Your Website Styles */
-a {
-  text-decoration: none;
-  list-style: none;
-  color: #363636;
-  text-align: right;
-}
-
-a:hover, {
-  color: #000;
-}
-
-.banner {
-  background-color: #C4634F;
-  margin-top: -10px;
-  margin-bottom: 30px;
-}
-
 body {
-  font-family: 'Calibri';
-  color: #363636;
-  background-color: #132139;
-  font-size: 16px;
-  margin-left: 20px;
   background: url("../img/grey_wash_wall.png");
 }
 
@@ -41,37 +19,14 @@ h1 {
 
 img {
   margin-bottom: -30px;
-  text-align: center;
-}
-
-.links_top {
-  color: black;
-  font-family: 'Cinzel Decorative', serif;
-  font-size: 15px;
-  text-align: center;
-  list-style: none;
-  margin-bottom: -5em;
-}
-
-.nav_top {
-  color: #132139;
-  text-align: right;
-  text-transform: uppercase;
-  font-weight: bold;
-  margin-bottom: -15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .subtitle {
   color: #fff;
   text-align: center;
   font-size: 14px;
-}
-
-ul li {
-  color: #363636;
-  text-decoration: none;
-  list-style: none;
-  text-align: right;
 }
 
 
