--- a/css/styles.css
+++ b/css/styles.css
@@ -21,10 +21,8 @@ h1 {
   margin-bottom: 0px;
 }
 
-img {
-  margin-bottom: -30px;
-  margin-left: auto;
-  margin-right: auto;
+.logo {
+  margin-left: 50%;
 }
 
 .subtitle {
