--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 /* Your Website Styles */
 body {
   background: url("../img/grey_wash_wall.png");
+  text-align: center;
   z-index: -1;
   height: 800px;
   width: 1000px;
@@ -10,15 +11,6 @@ body {
   text-align: center;
   color: black;
   padding-top: 150px;
-}
-
-h1 {
-  color: #8C201F; 
-  font-family: 'Cinzel Decorative', cursive;
-  font-weight: 700;
-  font-size: 36px;
-  text-align: center;
-  margin-bottom: 0px;
 }
 
 .logo {
@@ -49,10 +41,12 @@ h1 {
 .gallery {
   position: relative;
 }
+
 .gallery .item {
   height: 400px;
   overflow: hidden;
   text-align: center;
+  margin-top: -20px;
 }
 .gallery .controls {
   position: absolute;
@@ -63,6 +57,7 @@ h1 {
 
 .gallery .controls img {
   border: 1px solid #000;
+  size: 200px;
 }
 
 .gallery .control-button {
