--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
   background: url("../img/grey_wash_wall.png");
   text-align: center;
   z-index: -1;
-  height: 800px;
+  height: 1000px;
   width: 1000px;
 }
 
@@ -43,10 +43,9 @@ body {
 }
 
 .gallery .item {
-  height: 400px;
+  height: 500px;
   overflow: hidden;
   text-align: center;
-  margin-top: -20px;
 }
 .gallery .controls {
   position: absolute;
@@ -58,6 +57,12 @@ body {
 .gallery .controls img {
   border: 1px solid #000;
   size: 200px;
+}
+
+.gallery .controls img:hover,
+.gallery .controls img:active {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
 }
 
 .gallery .control-button {
