--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .controls {
-margin-left: 60px;
+  margin-left: 150px;
 }
 
 .footer {
@@ -16,12 +16,9 @@ margin-left: 60px;
   color: black;
   padding-top: 30px;
   padding-bottom: -100px;
+  padding-left: 200px;
 }
  
-.logo {
-  margin-left: 50%;
-}
-
 section {
   align: center;
   margin-left: 200px;
