--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,20 @@
 /* Your Website Styles */
+a:link {
+  color: black;
+  text-decoration: none;
+}
+
+a:visited{
+  color: white;
+  text-decoration: none;
+}
+
+
 body {
   background: url("../img/grey_wash_wall.png");
   text-align: center;
   z-index: -1;
-  height: 900px;
+  height: 90px;
   width: 1000px;
 }
 
@@ -13,6 +24,7 @@ body {
 
 .footer {
   text-align: center;
+  font-family: 'Calibri';
   color: black;
   padding-top: 30px;
   padding-bottom: -100px;
@@ -32,7 +44,7 @@ h3 {
 }
 
 ul {
-  color: black;
+  color: #000;
   font-family: 'Calibri';
   padding-left: 350px;
   text-decoration: none;
