--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,4 @@
 /* Your Website Styles */
-a:link {
-  color: #000;
-  text-decoration: none;
-  font-family: 'Calibri';
-  padding-left: 350px;
-  list-style: none;
-}
-
-
 body {
   background: url("../img/grey_wash_wall.png");
   text-align: center;
@@ -50,6 +41,12 @@ section {
   color: #fff;
   text-align: center;
   font-size: 14px;
+}
+
+ul {
+  list-style: none;
+  text-decoration: none;
+  margin-left: 300px;
 }
 
 
